add_library(libjpeg STATIC
    libjpeg-turbo/jcapimin.c
    libjpeg-turbo/jcapistd.c
    libjpeg-turbo/jccoefct.c
    libjpeg-turbo/jccolor.c
    libjpeg-turbo/jcdctmgr.c
    libjpeg-turbo/jchuff.c
    libjpeg-turbo/jcicc.c
    libjpeg-turbo/jcinit.c
    libjpeg-turbo/jcmainct.c
    libjpeg-turbo/jcmarker.c
    libjpeg-turbo/jcmaster.c
    libjpeg-turbo/jcomapi.c
    libjpeg-turbo/jcparam.c
    libjpeg-turbo/jcphuff.c
    libjpeg-turbo/jcprepct.c
    libjpeg-turbo/jcsample.c
    libjpeg-turbo/jctrans.c
    libjpeg-turbo/jdapimin.c
    libjpeg-turbo/jdapistd.c
    libjpeg-turbo/jdatadst.c
    libjpeg-turbo/jdatasrc.c
    libjpeg-turbo/jdcoefct.c
    libjpeg-turbo/jdcolor.c
    libjpeg-turbo/jddctmgr.c
    libjpeg-turbo/jdhuff.c
    libjpeg-turbo/jdicc.c
    libjpeg-turbo/jdinput.c
    libjpeg-turbo/jdmainct.c
    libjpeg-turbo/jdmarker.c
    libjpeg-turbo/jdmaster.c
    libjpeg-turbo/jdmerge.c
    libjpeg-turbo/jdphuff.c
    libjpeg-turbo/jdpostct.c
    libjpeg-turbo/jdsample.c
    libjpeg-turbo/jdtrans.c
    libjpeg-turbo/jerror.c
    libjpeg-turbo/jfdctflt.c
    libjpeg-turbo/jfdctfst.c
    libjpeg-turbo/jfdctint.c
    libjpeg-turbo/jidctflt.c
    libjpeg-turbo/jidctfst.c
    libjpeg-turbo/jidctint.c
    libjpeg-turbo/jidctred.c
    libjpeg-turbo/jquant1.c
    libjpeg-turbo/jquant2.c
    libjpeg-turbo/jutils.c
    libjpeg-turbo/jmemmgr.c
    libjpeg-turbo/jmemnobs.c
    libjpeg-turbo/jaricom.c
    libjpeg-turbo/jcarith.c
    libjpeg-turbo/jdarith.c
    libjpeg-turbo/jsimd_none.c
)

target_link_libraries(
    libjpeg
    PRIVATE project_options
)

target_include_directories(
    libjpeg
    PUBLIC  .
            libjpeg-turbo
)
